--- a/ieee-web.css
+++ b/ieee-web.css
@@ -28,6 +28,15 @@ p, ul, ol, cite {
 	line-height: 1.2;
 }
 
+figure.top {
+	display: none;
+}
+
+figure.inside {
+	display: block;
+}
+
+
 .print-only {
 	display: none;
 }
