--- a/ieee-print.css
+++ b/ieee-print.css
@@ -273,7 +273,7 @@ small { font-size: 0.8rem; }
 	margin-top: 1rem;
 	padding-top: 0.3rem; }
 	size: 8.5in 11in;
-	margin: 0.75in 0.63in 1.0in 0.63in; }
+	margin: 0.68in 0.63in 0.8in 0.63in; }
 
 .cites > :not(:first-child)::before {
 	content: none; }
@@ -331,8 +331,9 @@ ol ol {
 .title {
 	font-size: 2.4rem;
 	font-variant: normal;
+	height: 7rem;
 	margin-top: 0;
-	margin-bottom: 0.5rem; }
+	margin-bottom: 0; }
 
 .subtitle {
 	font-size: 1.4rem;
@@ -344,7 +345,7 @@ ol ol {
 
 header {
 	margin-top: 0.0rem;
-	margin-bottom: 3.4rem; }
+	margin-bottom: 3.2rem; }
 
 .footnote {
 	font-size: 0.8rem;
@@ -364,7 +365,18 @@ header {
 	column-break-after: always;
 	text-align: center; }
 	.author > :first-child {
-	font-size: 0.9rem; }
+	font-size: 1.1rem; }
+
+.author .dept,
+.author .org {
+	font-style: italic;
+	font-size: 0.9rem;
+}
+
+.author .city,
+.author .email {
+	font-size: 0.9rem;
+}
 
 .equation {
 	margin: 1.2rem 0 0.8rem;
