--- a/ieee-conf-print.css
+++ b/ieee-conf-print.css
@@ -331,9 +331,8 @@ ol ol {
 .title {
 	font-size: 2.4rem;
 	font-variant: normal;
-	height: 7rem;
 	margin-top: 0;
-	margin-bottom: 0; }
+	margin-bottom: 4.2rem; }
 
 .subtitle {
 	font-size: 1.4rem;
