--- a/ieee-print.css
+++ b/ieee-print.css
@@ -87,6 +87,17 @@ figcaption {
 figcaption::before {
 	content: "Fig. " counter(figure) ". "; }
 
+.graph-wrap {
+	position: relative;
+	display: inline-block;
+}
+
+.graph-label {
+	position: absolute;
+	font-size: 0.6rem;
+}
+
+
 table {
 	font-size: 0.8rem; 
 	page-break-inside: avoid;
@@ -416,4 +427,5 @@ header {
 	padding-right: 1rem;
 	padding-bottom: 0.5rem;
 }
+
 
