--- a/ieee-print.css
+++ b/ieee-print.css
@@ -65,6 +65,11 @@ pre {
 	counter-increment: code;
 }
 
+section.language-prs pre {
+	page-break-inside: auto;
+	break-inside: auto;
+}
+
 figure {
 	display: block;
 	page-break-inside: avoid;
