cleanup of various labels

--- a/cuthesis-print.css
+++ b/cuthesis-print.css
@@ -92,6 +92,9 @@ figure {
 	margin: 0.5rem 0 0.5rem 0;
 	width: 100%;
 	text-align: center;
+}
+
+figure figcaption:first-of-type {
 	counter-increment: image;
 }
 
