fixing formatting on the css counters and got a working full-page table/figure

--- a/cuthesis-print.css
+++ b/cuthesis-print.css
@@ -15,8 +15,7 @@ body {
 	margin: 0 0 0 0;
 	padding: 0 0 0 0;
 	hyphens: none;
-	counter-reset: section;
-	counter-reset: image;
+	counter-reset: section_id figure_id table_id code_id;
 }
 
 a {
@@ -77,7 +76,7 @@ pre {
 	font-size: 1.0rem;
 	max-width: calc(100% - 1.0rem);
 	padding: 0.25rem 0.25rem 0.25rem 0.25rem;
-	counter-increment: code;
+	counter-increment: code_id;
 }
 
 section.language-prs pre {
@@ -95,7 +94,7 @@ figure {
 }
 
 figure figcaption:first-of-type {
-	counter-increment: image;
+	counter-increment: figure_id;
 }
 
 figcaption {
@@ -109,16 +108,17 @@ figcaption {
 }
 
 figcaption::before {
-	content: "Fig. " counter(image) ": "; }
+	content: "Fig. " counter(figure_id) ": ";
+}
 
 table {
-	font-size: 0.8rem; 
 	page-break-inside: avoid;
+	break-inside: avoid;
+	font-size: 0.8rem; 
 	border-collapse: collapse;
 	border-spacing: 0px;	
-	counter-increment: table;
-	margin: 0.25rem 0 0.75rem 0;
-	width: 100%; }
+	margin: 0.25rem auto 0.5rem auto;
+}
 
 thead,tfoot { display: table-row-group; }
 
@@ -126,8 +126,25 @@ thead,tfoot { display: table-row-group; }
 	border-bottom: 1px solid #000;
 }
 
+tr.shade {
+	background-color: #EEEEEE;
+}
+
+tr .red {
+	background-color: #FFEEEE;
+}
+
+tr .blue {
+	background-color: #EEEEFF;
+}
+
 th {
 	font-weight: bold;
+	border-bottom: 3px solid black;
+}
+
+th code {
+	font-weight: normal;
 }
 
 th,
@@ -136,21 +153,27 @@ td {
 	font-size: 10pt;
 	border-spacing: 0px;	
 	margin: 0 0 0 0;
-	padding: 0.333rem;
-	text-align: center; }
+	padding: 0.1rem 0.2rem 0.1rem 0.2rem;
+	text-align: center;
+	white-space: nowrap;
+}
 
-table > caption {
+table caption:first-of-type {
+	counter-increment: table_id;
+}
+
+table caption {
 	caption-side: bottom;
-	text-align: middle;
-	line-height: 1.5;
+	text-align: center;
 	font: inherit;
 	font-size: 1.0rem;
 	font-weight: normal;
+	line-height: 1.5;
 	margin: 0 0 0.4rem 0;
 }
 
-table > caption::before {
-	content: "Table " counter(table) ". ";
+table caption::before {
+	content: "Table " counter(table_id) ". ";
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -162,7 +185,8 @@ h1, h2, h3, h4, h5, h6 {
 	text-align: left;
 	text-justify: none;
 	break-after: avoid;
-	hyphens: none; }
+	hyphens: none;
+}
 
 h1 {
 	text-transform: uppercase;
@@ -194,6 +218,11 @@ h5 {
 	text-align: center;
 }
 
+h6 {
+	font-style: italic;
+	margin: 0.025rem 0 0.025rem 0;
+}
+
 section.cover {
 	padding-top: 1in;
 	padding-bottom: 1in;
@@ -206,7 +235,7 @@ section.cover p {
 
 section.counter-skip:not(.cover) { padding-top: 3.6rem; }
 
-section:not(.counter-skip) { counter-increment: section; }
+section:not(.counter-skip) { counter-increment: section_id; }
 section:not(.counter-skip) h1::before {
 	display: block;
 	margin-bottom: 1.0rem;
@@ -214,7 +243,7 @@ section:not(.counter-skip) h1::before {
 	line-height: 1.9;
 	font-size: 1.2rem;
 	font-variant: normal;
-	content: "Chapter " counter(section, decimal); 
+	content: "Chapter " counter(section_id, decimal); 
 }
 
 section.counter-skip h1::before {
@@ -311,6 +340,24 @@ small { font-size: 0.8rem; }
 	/*a.xref:after {
 		content: leader('.') target-counter(attr(href), page);
 	}*/
+
+	.full-page-90 {
+		display: block;
+		position: relative;
+		width: 100%;
+		height: 1px;
+		page-break-before: always;
+		page-break-inside: avoid;
+		page-break-after: always;
+	}
+
+	.full-page-90 table,
+	.full-page-90 figure {
+		-moz-transform: translate(-0.75in,2in) rotate(-90.0deg);
+		-o-transform: translate(-0.75in,2in) rotate(-90.0deg);
+		-webkit-transform: translate(-0.75in,2in) rotate(-90.0deg);
+		position: absolute;
+	}
 }
 
 .cites > :not(:first-child)::before {
@@ -429,3 +476,4 @@ abbr {
 	border: none;
 	text-decoration: none;
 }
+
