--- a/ieee-print.css
+++ b/ieee-print.css
@@ -11,11 +11,7 @@ body {
 	font-family: "Times New Roman", Times, serif;
 	hyphens: none;
 	margin: 0% 0% 0% 0%;
-	counter-reset: figure;
-}
-
-body > :first-child {
-	counter-reset: page 1;
+	counter-reset: section figure_id table_id code_id;
 }
 
 .article-body {
@@ -61,8 +57,19 @@ pre {
 	page-break-inside: avoid;
 	font-size: 0.8rem;
 	max-width: calc(100% - 1.0rem);
-	padding: 0.25rem 0.25rem 0.25rem 0.25rem;
-	counter-increment: code;
+	padding: 0.1rem 0.1rem 0.1rem 0.1rem;
+	counter-increment: code_id;
+	vertical-align: top;
+}
+
+dt {
+	font-weight: bold;
+	margin-top: 0.5rem;
+}
+
+dd {
+	margin-left: 0.5rem;
+	padding: 0rem;
 }
 
 section.language-prs pre {
@@ -77,7 +84,10 @@ figure {
 	margin: 0.5rem 0 0.5rem 0;
 	width: 100%;
 	text-align: center;
-	counter-increment: figure;
+}
+
+figure figcaption:first-of-type {
+	counter-increment: figure_id;
 }
 
 figcaption {
@@ -90,7 +100,7 @@ figcaption {
 }
 
 figcaption::before {
-	content: "Fig. " counter(figure) ". "; }
+	content: "Fig. " counter(figure_id) ". "; }
 
 .graph-wrap {
 	position: relative;
@@ -104,13 +114,13 @@ figcaption::before {
 
 
 table {
-	font-size: 0.8rem; 
 	page-break-inside: avoid;
+	break-inside: avoid;
+	font-size: 0.8rem; 
 	border-collapse: collapse;
 	border-spacing: 0px;	
-	counter-increment: table;
-	margin: 0.25rem 0 0.75rem 0;
-	width: 100%; }
+	margin: 0.25rem auto 0.5rem auto;
+}
 
 thead,tfoot { display: table-row-group; }
 
@@ -120,6 +130,11 @@ thead,tfoot { display: table-row-group; }
 
 th {
 	font-weight: bold;
+	border-bottom: 3px solid black;
+}
+
+th code {
+	font-weight: normal;
 }
 
 th,
@@ -128,20 +143,26 @@ td {
 	font-size: 10pt;
 	border-spacing: 0px;	
 	margin: 0 0 0 0;
-	padding: 0.333rem;
-	text-align: center; }
+	padding: 0.1rem 0.2rem 0.1rem 0.2rem;
+	text-align: center;
+	white-space: nowrap;
+}
 
-table > caption {
+table caption:first-of-type {
+	counter-increment: table_id;
+}
+
+table caption {
 	caption-side: bottom;
-	text-align: middle;
+	text-align: center;
 	font: inherit;
 	font-size: 0.8rem;
 	font-weight: normal;
 	margin: 0 0 0.4rem 0;
 }
 
-table > caption::before {
-	content: "Table " counter(table) ". ";
+table caption::before {
+	content: "Table " counter(table_id) ". ";
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -297,6 +318,26 @@ small { font-size: 0.8rem; }
 	size: 8.5in 11in;
 	margin: 0.5in 0.62in 0.5in 0.62in; }
 
+@media print {
+	.full-page-90 {
+		display: block;
+		position: relative;
+		width: 100%;
+		height: 1px;
+		page-break-before: always;
+		page-break-inside: avoid;
+		page-break-after: always;
+	}
+
+	.full-page-90 table,
+	.full-page-90 figure {
+		-moz-transform: translate(-0.75in,2in) rotate(-90.0deg);
+		-o-transform: translate(-0.75in,2in) rotate(-90.0deg);
+		-webkit-transform: translate(-0.75in,2in) rotate(-90.0deg);
+		position: absolute;
+	}
+}
+
 .cites > :not(:first-child)::before {
 	content: none; }
 
@@ -339,14 +380,12 @@ ol {
 	text-align: justify;
 	line-height: 1.2;
 	list-style: decimal outside none;
-	font-style: italic;
 	margin: 0 0 0.25rem 0;
 	padding-left: 1.25rem;
 }
 
 ol ol {
 	list-style: lower-alpha outside none;
-	font-style: italic;
 	margin: 0 0 0 0;
 }
 
