--- a/ieee-conf-print.css
+++ b/ieee-conf-print.css
@@ -160,10 +160,10 @@ h4.counter-reset { counter-increment: subsubsection; }
 h5.counter-reset { counter-increment: subsubsubsection; }
 h6.counter-reset { counter-increment: subsubsubsubsection; }
 
-h1:not(.counter-skip):not(.appendix):not(.references)::before {
+h1:not(.counter-skip):not(#appendix):not(#references)::before {
 	content: "" "" counter(section, upper-roman) "."; }
 
-h2:not(.counter-skip):not(.appendix)::before {
+h2:not(.counter-skip):not(#appendix)::before {
 	content: "" "" counter(subsection, upper-alpha) "."; }
 
 h3:not(.counter-skip)::before {
@@ -178,15 +178,15 @@ h5:not(.counter-skip)::before {
 h6:not(.counter-skip)::before {
 	content: "" "" counter(subsubsubsubsection, upper-roman) "."; }
 
-h1.appendix:not(.counter-skip)::before {
+h1#appendix:not(.counter-skip)::before {
 	content: "" !important;
 	margin-right: 0 !important;
 }
 
-h2.appendix:not(.counter-skip)::before {
+h2#appendix:not(.counter-skip)::before {
 	content: "" counter(subsection, upper-alpha) "."; }
 
-h1.references:not(.counter-skip)::before {
+h1#references:not(.counter-skip)::before {
 	content: "" !important;
 	margin-right: 0 !important;
 }
@@ -397,7 +397,7 @@ header {
 	right: 0;
 	top: 50%; }
 
-.references {
+#references {
 	margin-top: 1.2rem; }
 
 .bio {
