--- a/code.css
+++ b/code.css
@@ -9,7 +9,7 @@ code[class*="language-"],
 pre[class*="language-"] {
 	color: black;
 	background: none;
-	text-shadow: 0 1px white;
+	text-shadow: none;
 	font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
 	text-align: left;
 	white-space: pre-wrap;       /* Since CSS 2.1 */
@@ -142,6 +142,9 @@ pre[class*="language-"] {
 
 /* Block code */
 pre[class*="language-"] {
+	box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
 	margin: 0 0 0.5rem 0;
 }
 
