--- a/cuthesis-print.css
+++ b/cuthesis-print.css
@@ -36,12 +36,11 @@ a {
 }
 
 img {
+	display: table-cell;
 	box-sizing: border-box;
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
-	display: inline-block;
-	max-width: 100%;
-	max-height: 100%;
+	width: 100%;
 	vertical-align: top;
 }
 
@@ -60,6 +59,7 @@ img {
 	page-break-inside: avoid;
 	break-inside: avoid;
 	text-align: center;
+	white-space: nowrap;
 }
 
 .toc-page {
@@ -121,13 +121,24 @@ section.language-prs pre {
 	break-inside: auto;
 }
 
+.code-block pre {
+	display: inline-block;
+	margin-left:3px;
+}
+
+.code-block pre:first-child {
+	margin-left:0px;
+}
+
 figure {
-	display: block;
-	float: top;
+	display: table;
 	page-break-inside: avoid;
 	break-inside: avoid;
-	margin: 0.5rem 0 0.5rem 0;
+	border-collapse: collapse;
+	border-spacing: 0px;	
+	margin: 0.5rem auto 0.5rem auto;
 	text-align: center;
+	white-space: nowrap;
 }
 
 figure figcaption:first-of-type {
@@ -135,10 +146,12 @@ figure figcaption:first-of-type {
 }
 
 figcaption {
+	font: inherit;
+	display: table-caption;
 	caption-side: bottom;
+	white-space: normal;
 	text-align: left;
 	line-height: 1.0;
-	font: inherit;
 	font-size: 1.0rem;
 	font-weight: normal;
 	margin: 0 0 0.4rem 0;
@@ -207,9 +220,9 @@ table caption:first-of-type {
 }
 
 table caption {
+	font: inherit;
 	caption-side: bottom;
 	text-align: left;
-	font: inherit;
 	font-size: 1.0rem;
 	font-weight: normal;
 	line-height: 1.0;
@@ -419,6 +432,12 @@ small { font-size: 0.8rem; }
 		-o-transform: translate(-0.75in,2in) rotate(-90.0deg);
 		-webkit-transform: translate(-0.75in,2in) rotate(-90.0deg);
 		position: absolute;
+	}
+
+	table,
+	figure {
+		float-reference: page;
+		float: top;
 	}
 }
 
